ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement6/input.ts.stderr
error: Expected one variable binding
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement6/input.ts:1:17
  |
1 | for (var a = 1, b = 2 in X) {
  |                 ^

